--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
-    "mineflayer": "^4.27.0"
+    "mineflayer": "^4.27.0",
+    "mineflayer-pathfinder": "^2.4.5"
   }
 }
