--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
+    "minecraft-data": "^3.85.0",
     "mineflayer": "^4.27.0",
-    "mineflayer-pathfinder": "^2.4.5"
+    "mineflayer-pathfinder": "^2.4.5",
+    "vec3": "^0.1.10"
   }
 }
