--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "groq-sdk": "^0.19.0",
     "minecraft-data": "^3.85.0",
     "mineflayer": "^4.27.0",
     "mineflayer-pathfinder": "^2.4.5",
